<resources>
    <string name="app_name">BookScanner</string>
    <string name="content_timer_title">바코드를 스캔 하여 타이머에 등록하거나 \n 우측 상단 에서 선택할수 있습니다!</string>
    <string name="content_timer_title2">책을 고른뒤 뒤집으면 타이머가 작동되고,\n화면이 어두워집니다.</string>
    <!-- Content Of Navigation -->
    <string name="content_drawer">네비게이션</string>
    <string name="content_nav_home">타이머</string>
    <string name="content_nav_home2">스캐너</string>

    <!-- Content Of Images Description -->
    <string name="content_description_image_close">닫기 이미지</string>
    <string name="content_description_image_logo">로고 이미지</string>
    <string name="content_description_image_book">책 이미지</string>
    <string name="content_description_image_book_background">책 이미지 뒷 배경</string>

    <!-- Permission Message -->
    <string name="content_permission_request">앱의 기능을 사용하기 위해서는 권한이 필요합니다.</string>
    <string name="content_button_confirm">확인</string>
    <string name="content_permission_request_settings">[설정] > [권한] 에서 권환을 허용할 수 있습니다.</string>
    <string name="content_alert_negative_of_mobile_data">허용안함</string>

    <!--Main Fragment  Drawer Fragment -->
    <string name="main_text_title">제목    : </string>
    <string name="main_text_author">저자    : </string>
    <string name="main_text_publisher">출판사 : </string>
    <string name="main_text_ct_date">최초 등록일 : </string>
    <string name="main_text_md_date">최근 독서일 : </string>
    <string name="main_text_btn_save">저장하기</string>

    <string name="drawer_text_delete">삭제</string>
    <string name="drawer_text_delete_all">초기화</string>
    <!--Sub Fragment -->
    <string name="sub_button_re_confirm">다시찍기</string>
    <string name="sub_button_confirm">등록하기</string>
    <!--Book Info Dialog -->
    <string name="dialog_title">Book Info</string>
    <string name="dialog_reg_timer">타이머등록</string>
    <string name="dialog_reg">등록하기</string>


</resources>