<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="title" type="String" />
        <variable name="author" type="String" />
        <variable name="publisher" type="String" />
        <variable name="url" type="String" />
        <variable name="isRoom" type="String" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        style="@style/Widget.AppCompat.Button.Borderless">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_round_border_trans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dialog_title"
                android:fontFamily="@font/app_main_font"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <View-->
<!--                android:id="@+id/view"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:background="@color/white"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView7" />-->
            <FrameLayout
                android:padding="3dp"
                android:elevation="-1dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="-30dp"
                    app:cardCornerRadius="30dp">
                    <ImageView
                        android:id="@+id/iv_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/content_description_image_book_background"
                        android:scaleType="fitXY"
                        android:src="@mipmap/book_background"
                        />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_book"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_margin="100dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    bindBookImage="@{url}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_image_book"
                    android:src="@drawable/ic_book" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/main_text_title"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_book"
                tools:text="제목    : " />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{title}"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                tools:text="홍길동전" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_text_author"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                tools:text="저자    : " />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{author}"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="홍길동" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_text_publisher"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="출판사 : " />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{publisher}"
                android:fontFamily="@font/app_main_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                tools:text="우리집" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="30dp"
                android:background="@drawable/background_round_border_gray"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/dialog_reg_timer"
                android:fontFamily="@font/app_main_font"
                android:visibility="@{isRoom == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_reg"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_reg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="30dp"
                android:background="@drawable/background_round_border_gray"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/dialog_reg"
                android:fontFamily="@font/app_main_font"
                android:visibility="@{isRoom == null ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_timer" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>