<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.View" />
        <import type="android.graphics.Color" />
        <variable name="data" type="kr.kro.fatcats.bookscanner.model.ListInfo"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/very_light_gray"
            app:cardCornerRadius="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/iv_book"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        bindBookImage="@{data.url}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/content_description_image_book"
                        android:src="@drawable/ic_book" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/main_text_title"
                    android:fontFamily="@font/app_main_font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_book"
                    app:layout_constraintTop_toTopOf="@+id/iv_book"
                    tools:text="제목    : " />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:fontFamily="@font/app_main_font"
                    android:text="@{data.title}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/cardView"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    tools:text="홍길동전" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:text="@string/main_text_author"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="저자    : " />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:fontFamily="@font/app_main_font"
                    android:text="@{data.author}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/cardView"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    tools:text="홍길동" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:text="@string/main_text_publisher"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="출판사 : " />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{data.publisher}"
                    android:textSize="12sp"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintEnd_toStartOf="@+id/cardView"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    tools:text="우리집" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/main_text_ct_date"
                    android:textSize="12sp"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:text="처음 읽은 날짜 : " />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{data.ct_date}"
                    android:textSize="12sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    tools:text="2020-20-20" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/main_text_md_date"
                    android:textSize="12sp"
                    android:fontFamily="@font/app_main_font"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:text="마지막 읽은 날짜 : " />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{data.mod_date}"
                    android:textSize="12sp"
                    android:fontFamily="@font/app_main_font"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    tools:text="2020-20-20" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="60dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/main_color_bright"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/app_main_font"
                        bindDrawerTime="@{data.time}"
                        tools:text="약 120분" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>